@@ -1,3 +1,8 @@
+2008-08-20  Sam Steingold  <sds@gnu.org>
+
+	* makemake.in (check-script): use ${TRCRLF} to delete '\r' from
+	output in addition to replacing '\n' with '_' to fix woe32
+
 2008-08-18  Sam Steingold  <sds@gnu.org>
 
 	* modules/syscalls/calls.c: make sure that end_system_call() is
